# TLPUI

./: .gitignore  .python-version  AUTHORS.md  COPYING.md  README.md  app.ini  config.py  configcategories.json  configschema.json  configui.py  css.py  extractLocaleStringsFromSchema.py  file.py  language.py  mainui.py  parser.py  pyproject.toml  requirements.txt  settings.py  setup.py  statui.py  styles.css  tlpui.desktop  tlpui.py  tox.ini  translationStringsExtractor.py  translationValidationHelper.py  ui.py  unitests.py  unittests.py
.github/workflows/: python-app.yml
AppImage/: .gitignore  com.github.d4nj1.tlpui.appdata.xml  com.github.d4nj1.tlpui.pkg.yml  pkg2appimage.sh
configschema/: 0_8.json  0_9.json  1_0.json  1_1.json
docs/: DEVELOPMENT.md  INSTALL.md  README.md  schema_to_ui.xml
flatpak/: FLATPAK.md  README.md  com.github.d4nj1.tlpui.json  host-exec-wrapper.sh  org.flatpak.tlpui.json  tlp-stat-wrapper.sh  tlp-wrapper.sh  which-wrapper.sh
icons/: ICON-AUTHORS
lang/: __init__.py  available.py  configschema.json.0_8-0_9-1_0.h  extractLocaleStringsFromSchema.py
test/: test_tlp_configs.py  test_tlp_settings.py
tests/: test_tlp_configs.py
tlpui/: __init__.py  __main__.py  backend.py  cmdhelper.py  config.py  configui.py  constants.py  css.py  errorui.py  file.py  filehelper.py  language.py  mainui.py  settings.py  settingshelper.py  statui.py  styles.css  uihelper.py
tlpui/configschema/: 0_8.json  0_9.json  1_0.json  (+14 more)
ui_config_objects/: gtkcheckbutton.py  gtkdisklist.py  gtkdisklistview.py  gtkentry.py  gtkmultiselection.py  gtkpcilist.py  gtkselection.py  gtkspinbutton.py  gtkswitch.py  gtktoggle.py  gtkusbentry.py  gtkusblist.py
(+146 files in other folders)
